StereoKitC/stereokit.h


typedef int32_t bool32_t;


/*When rendering content, you can filter what you're rendering by the
  RenderLayer that they're on. This allows you to draw items that are
  visible in one render, but not another. For example, you may wish
  to draw a player's avatar in a 'mirror' rendertarget, but not in
  the primary display. See `Renderer.LayerFilter` for configuring what
  the primary display renders.
  
  Render layers can also be mixed and matched like bit-flags!*/
typedef enum render_layer_ {
	/*The default render layer. All Draw use this layer unless
	  otherwise specified.*/
	render_layer_0                = 1 << 0,
	/*Render layer 1.*/
	render_layer_1                = 1 << 1,
	/*Render layer 2.*/
	render_layer_2                = 1 << 2,
	/*Render layer 3.*/
	render_layer_3                = 1 << 3,
	/*Render layer 4.*/
	render_layer_4                = 1 << 4,
	/*Render layer 5.*/
	render_layer_5                = 1 << 5,
	/*Render layer 6.*/
	render_layer_6                = 1 << 6,
	/*Render layer 7.*/
	render_layer_7                = 1 << 7,
	/*Render layer 8.*/
	render_layer_8                = 1 << 8,
	/*Render layer 9.*/
	render_layer_9                = 1 << 9,
	/*The default VFX layer, StereoKit draws some non-standard
	  mesh content using this flag, such as lines.*/
	render_layer_vfx              = 1 << 10,
	/*This is a flag that specifies all possible layers. If you
	  want to render all layers, then this is the layer filter
	  you would use. This is the default for render filtering.*/
	render_layer_all              = 0xFFFF,
	/*This is a combination of all layers that are not the VFX layer.*/
	render_layer_all_regular      = render_layer_0 | render_layer_1 | render_layer_2 | render_layer_3 | render_layer_4 | render_layer_5 | render_layer_6 | render_layer_7 | render_layer_8 | render_layer_9,
} render_layer_;


/*For performance sensitive areas, or places dealing with large chunks of
  memory, it can be faster to get a reference to that memory rather than
  copying it! However, if this isn't explicitly stated, it isn't necessarily
  clear what's happening. So this enum allows us to visibly specify what type
  of memory reference is occurring.*/
typedef enum memory_ {
	/*The chunk of memory involved here is a reference that is still managed or
	  used by StereoKit! You should _not_ free it, and be extremely cautious
	  about modifying it.*/
	memory_reference,
	/*This memory is now _yours_ and you must free it yourself! Memory has been
	  allocated, and the data has been copied over to it. Pricey! But safe.*/
	memory_copy,
} memory_;


///////////////////////////////////////////

typedef struct vec2 {
	float x;
	float y;
} vec2;

typedef struct vec3 {
	float x;
	float y;
	float z;
} vec3;

typedef struct vec4 {
	float x;
	float y;
	float z;
	float w;
} vec4;

typedef struct quat {
	float x;
	float y;
	float z; 
	float w;
} quat;

typedef union matrix {
	vec4 row[4];
	float m[16];
} matrix;

typedef struct ray_t {
	vec3 pos;
	vec3 dir;
} ray_t;

typedef struct bounds_t {
	vec3 center;
	vec3 dimensions;
} bounds_t;

typedef struct plane_t {
	vec3  normal;
	float d;
} plane_t;

typedef struct sphere_t {
	vec3  center;
	float radius;
} sphere_t;

typedef struct pose_t {
	vec3 position;
	quat orientation;
} pose_t;

SK_API matrix   matrix_orthographic       (float width, float height, float near_clip, float far_clip);

SK_API bool32_t matrix_decompose          (const sk_ref(matrix) transform, sk_ref(vec3) out_position, sk_ref(vec3) out_scale, sk_ref(quat) out_orientation);

SK_API vec3     matrix_extract_translation(const sk_ref(matrix) transform);

SK_API vec3     matrix_extract_scale      (const sk_ref(matrix) transform);

SK_API quat     matrix_extract_rotation   (const sk_ref(matrix) transform);

SK_API pose_t   matrix_extract_pose       (const sk_ref(matrix) transform);


SK_API bool32_t ray_intersect_plane       (ray_t ray, vec3 plane_pt, vec3 plane_normal, sk_ref(float) out_t);

SK_API bool32_t ray_from_mouse            (vec2 screen_pixel_pos, sk_ref(ray_t) out_ray);


SK_API plane_t  plane_from_points         (vec3 p1, vec3 p2, vec3 p3);

SK_API plane_t  plane_from_ray            (ray_t ray);

static inline float    vec4_magnitude   (vec4 a) { return sqrtf(a.x*a.x + a.y*a.y + a.z*a.z + a.w*a.w); }

static inline float    vec3_magnitude   (vec3 a) { return sqrtf(a.x*a.x + a.y*a.y + a.z*a.z); }

static inline float    vec2_magnitude   (vec2 a) { return sqrtf(a.x*a.x + a.y*a.y); }

static inline float    vec3_magnitude_sq(vec3 a) { return a.x*a.x + a.y*a.y + a.z*a.z; }

static inline float    vec2_magnitude_sq(vec2 a) { return a.x*a.x + a.y*a.y; }

static inline float    vec3_dot         (vec3 a, vec3 b) { return a.x*b.x + a.y*b.y + a.z*b.z; }

static inline float    vec2_dot         (vec2 a, vec2 b) { return a.x*b.x + a.y*b.y; }

static inline float    vec3_distance_sq (vec3 a, vec3 b) { vec3 v = {a.x-b.x, a.y-b.y, a.z-b.z}; return vec3_magnitude_sq(v); }

static inline float    vec2_distance_sq (vec2 a, vec2 b) { vec2 v = {a.x-b.x, a.y-b.y}; return vec2_magnitude_sq(v); }

static inline float    vec3_distance    (vec3 a, vec3 b) { vec3 v = {a.x-b.x, a.y-b.y, a.z-b.z}; return vec3_magnitude(v); }

static inline float    vec2_distance    (vec2 a, vec2 b) { vec2 v = {a.x-b.x, a.y-b.y}; return vec2_magnitude(v); }

static inline vec3     vec3_project     (vec3 a, vec3 onto_b) { float t = vec3_dot(a,onto_b)/vec3_magnitude_sq(onto_b); vec3 v = {onto_b.x*t, onto_b.y*t, onto_b.z*t}; return v; }

static inline vec4     vec4_normalize   (vec4 a) { float imag = 1.0f/vec4_magnitude(a); vec4 v = {a.x*imag, a.y*imag, a.z*imag, a.w*imag}; return v; }

static inline vec3     vec3_normalize   (vec3 a) { float imag = 1.0f/vec3_magnitude(a); vec3 v = {a.x*imag, a.y*imag, a.z*imag}; return v; }

static inline vec2     vec2_normalize   (vec2 a) { float imag = 1.0f/vec2_magnitude(a); vec2 v = {a.x*imag, a.y*imag}; return v; }

static inline vec3     vec3_abs         (vec3 a) { vec3 v = { fabsf(a.x), fabsf(a.y), fabsf(a.z) }; return v; }

static inline vec2     vec2_abs         (vec2 a) { vec2 v = { fabsf(a.x), fabsf(a.y) }; return v; }

static inline vec3     vec3_lerp        (vec3 a, vec3 b, float t) { vec3 v = { a.x + (b.x - a.x)*t, a.y + (b.y - a.y)*t, a.z + (b.z - a.z)*t }; return v; }

static inline vec2     vec2_lerp        (vec2 a, vec2 b, float t) { vec2 v = { a.x + (b.x - a.x)*t, a.y + (b.y - a.y)*t }; return v; }

static inline bool32_t vec3_in_radius   (vec3 pt, vec3 center, float radius) { return vec3_distance_sq(center, pt) < radius*radius; }

static inline bool32_t vec2_in_radius   (vec2 pt, vec2 center, float radius) { return vec2_distance_sq(center, pt) < radius*radius; }

///////////////////////////////////////////

SK_API bool32_t plane_ray_intersect    (plane_t plane, ray_t ray, vec3 *out_pt);

SK_API bool32_t plane_line_intersect   (plane_t plane, vec3 p1, vec3 p2, vec3 *out_pt);

SK_API vec3     plane_point_closest    (plane_t plane, vec3 pt);

SK_API bool32_t sphere_ray_intersect   (sphere_t sphere, ray_t ray, vec3 *out_pt);

SK_API bool32_t sphere_point_contains  (sphere_t sphere, vec3 pt);

SK_API bool32_t bounds_ray_intersect   (bounds_t bounds, ray_t ray, vec3 *out_pt);

SK_API bool32_t bounds_point_contains  (bounds_t bounds, vec3 pt);

SK_API bool32_t bounds_line_contains   (bounds_t bounds, vec3 pt1, vec3 pt2);

SK_API bool32_t bounds_capsule_contains(bounds_t bounds, vec3 pt1, vec3 pt2, float radius);

SK_API vec3     ray_point_closest      (ray_t ray, vec3 pt);


///////////////////////////////////////////

typedef struct color32 {
	uint8_t r;
	uint8_t g;
	uint8_t b;
	uint8_t a;
} color32;

typedef struct color128 {
	float r;
	float g;
	float b;
	float a;
} color128;


SK_API        color128 color_hsv      (float hue, float saturation, float value, float transparency);

SK_API        vec3     color_to_hsv   (const sk_ref(color128) color);

SK_API        color128 color_lab      (float l, float a, float b, float transparency);

SK_API        vec3     color_to_lab   (const sk_ref(color128) color);

SK_API        color128 color_to_linear(color128 srgb_gamma_correct);

SK_API        color128 color_to_gamma (color128 srgb_linear);


static inline color128 color_lerp     (color128 a, color128 b, float t) { color128 result = {a.r + (b.r - a.r)*t, a.g + (b.g - a.g)*t, a.b + (b.b - a.b)*t, a.a + (b.a - a.a)*t}; return result; }

static inline color32  color_to_32    (color128 a)                      { color32  result = {(uint8_t)(a.r * 255.f), (uint8_t)(a.g * 255.f), (uint8_t)(a.b * 255.f), (uint8_t)(a.a * 255.f)}; return result; }


static inline color128 color32_to_128 (color32 color) { color128 result = { color.r/255.0f, color.g/255.0f, color.b/255.0f, color.a/255.0f }; return result; }

static inline color32  color32_hex    (uint32_t hex)  { color32  result = {(uint8_t)(hex>>24), (uint8_t)((hex>>16)&0x000000FF), (uint8_t)((hex>>8)&0x000000FF), (uint8_t)(hex&0x000000FF)}; return result; }

static inline color128 color_hex      (uint32_t hex)  { return color32_to_128(color32_hex(hex)); }


///////////////////////////////////////////

typedef struct gradient_key_t {
	color128 color;
	float    position;
} gradient_key_t;


SK_API gradient_t gradient_create     ();

SK_API gradient_t gradient_create_keys(const gradient_key_t *keys, int32_t count);

SK_API void       gradient_add        (gradient_t gradient, color128 color_linear, float position);

SK_API void       gradient_set        (gradient_t gradient, int32_t index, color128 color_linear, float position);

SK_API void       gradient_remove     (gradient_t gradient, int32_t index);

SK_API int32_t    gradient_count      (gradient_t gradient);

SK_API color128   gradient_get        (gradient_t gradient, float at);

SK_API color32    gradient_get32      (gradient_t gradient, float at);

SK_API void       gradient_release    (gradient_t gradient); // TODO v0.4, consider renaming this to _destroy, no reference counting happens here!

///////////////////////////////////////////

typedef struct spherical_harmonics_t {
	vec3     coefficients[9];
} spherical_harmonics_t;


typedef struct sh_light_t {
	vec3     dir_to;
	color128 color;
} sh_light_t;


SK_API spherical_harmonics_t sh_create      (const sh_light_t* lights, int32_t light_count);

SK_API void                  sh_brightness  (      sk_ref(spherical_harmonics_t) harmonics, float scale);

SK_API void                  sh_add         (      sk_ref(spherical_harmonics_t) harmonics, vec3 light_dir, vec3 light_color);

SK_API color128              sh_lookup      (const sk_ref(spherical_harmonics_t) harmonics, vec3 normal);

SK_API vec3                  sh_dominant_dir(const sk_ref(spherical_harmonics_t) harmonics);


///////////////////////////////////////////

typedef struct vert_t {
	vec3    pos;
	vec3    norm;
	vec2    uv;
	color32 col;
} vert_t;


static inline vert_t vert_create(vec3 position, vec3 normal sk_default({ 0,1,0 }), vec2 texture_coordinates sk_default({ 0,0 }), color32 vertex_color sk_default({ 255,255,255,255 })) { vert_t v = { position, normal, texture_coordinates, vertex_color }; return v;  }

#ifdef SK_32BIT_INDICES
typedef uint32_t vind_t;
typedef uint16_t vind_t;

SK_API mesh_t   mesh_find            (const char *name);

SK_API mesh_t   mesh_create          ();

SK_API mesh_t   mesh_copy            (mesh_t mesh);

SK_API void     mesh_set_id          (mesh_t mesh, const char *id);

SK_API void     mesh_addref          (mesh_t mesh);

SK_API void     mesh_release         (mesh_t mesh);

SK_API void     mesh_draw            (mesh_t mesh, material_t material, matrix transform, color128 color_linear sk_default({1,1,1,1}), render_layer_ layer sk_default(render_layer_0));

SK_API void     mesh_set_keep_data   (mesh_t mesh, bool32_t keep_data);

SK_API bool32_t mesh_get_keep_data   (mesh_t mesh);

SK_API void     mesh_set_data        (mesh_t mesh, const vert_t *vertices, int32_t vertex_count, const vind_t *indices, int32_t index_count, bool32_t calculate_bounds sk_default(true));

SK_API void     mesh_set_verts       (mesh_t mesh, const vert_t *vertices, int32_t vertex_count, bool32_t calculate_bounds sk_default(true));

SK_API void     mesh_get_verts       (mesh_t mesh, sk_ref_arr(vert_t) out_vertices, sk_ref(int32_t) out_vertex_count, memory_ reference_mode);

SK_API int32_t  mesh_get_vert_count  (mesh_t mesh);

SK_API void     mesh_set_inds        (mesh_t mesh, const vind_t *indices, int32_t index_count);

SK_API void     mesh_get_inds        (mesh_t mesh, sk_ref_arr(vind_t) out_indices,  sk_ref(int32_t) out_index_count, memory_ reference_mode);

SK_API int32_t  mesh_get_ind_count   (mesh_t mesh);

SK_API void     mesh_set_draw_inds   (mesh_t mesh, int32_t index_count);

SK_API sound_t      sound_generate       (float (*function)(float sample_time), float duration);