LibStereoKit.jl


function matrix_orthographic(width, height, near_clip, far_clip)
    @ccall StereoKitC.matrix_orthographic(width::Cfloat, height::Cfloat, near_clip::Cfloat, far_clip::Cfloat)::matrix
end

function matrix_decompose(transform, out_position, out_scale, out_orientation)
    @ccall StereoKitC.matrix_decompose(transform::Ptr{matrix}, out_position::Ptr{vec3}, out_scale::Ptr{vec3}, out_orientation::Ptr{quat})::bool32_t
end

function matrix_extract_translation(transform)
    @ccall StereoKitC.matrix_extract_translation(transform::Ptr{matrix})::vec3
end

function matrix_extract_scale(transform)
    @ccall StereoKitC.matrix_extract_scale(transform::Ptr{matrix})::vec3
end

function matrix_extract_rotation(transform)
    @ccall StereoKitC.matrix_extract_rotation(transform::Ptr{matrix})::quat
end

function matrix_extract_pose(transform)
    @ccall StereoKitC.matrix_extract_pose(transform::Ptr{matrix})::pose_t
end

function ray_intersect_plane(ray, plane_pt, plane_normal, out_t)
    @ccall StereoKitC.ray_intersect_plane(ray::ray_t, plane_pt::vec3, plane_normal::vec3, out_t::Ptr{Cfloat})::bool32_t
end

function ray_from_mouse(screen_pixel_pos, out_ray)
    @ccall StereoKitC.ray_from_mouse(screen_pixel_pos::vec2, out_ray::Ptr{ray_t})::bool32_t
end

function plane_from_points(p1, p2, p3)
    @ccall StereoKitC.plane_from_points(p1::vec3, p2::vec3, p3::vec3)::plane_t
end

function plane_from_ray(ray)
    @ccall StereoKitC.plane_from_ray(ray::ray_t)::plane_t
end

function vec4_magnitude(a)
    @ccall StereoKitC.vec4_magnitude(a::vec4)::Cfloat
end

function vec3_magnitude(a)
    @ccall StereoKitC.vec3_magnitude(a::vec3)::Cfloat
end

function vec2_magnitude(a)
    @ccall StereoKitC.vec2_magnitude(a::vec2)::Cfloat
end

function vec3_magnitude_sq(a)
    @ccall StereoKitC.vec3_magnitude_sq(a::vec3)::Cfloat
end

function vec2_magnitude_sq(a)
    @ccall StereoKitC.vec2_magnitude_sq(a::vec2)::Cfloat
end

function vec3_dot(a, b)
    @ccall StereoKitC.vec3_dot(a::vec3, b::vec3)::Cfloat
end

function vec2_dot(a, b)
    @ccall StereoKitC.vec2_dot(a::vec2, b::vec2)::Cfloat
end

function vec3_distance_sq(a, b)
    @ccall StereoKitC.vec3_distance_sq(a::vec3, b::vec3)::Cfloat
end

function vec2_distance_sq(a, b)
    @ccall StereoKitC.vec2_distance_sq(a::vec2, b::vec2)::Cfloat
end

function vec3_distance(a, b)
    @ccall StereoKitC.vec3_distance(a::vec3, b::vec3)::Cfloat
end

function vec2_distance(a, b)
    @ccall StereoKitC.vec2_distance(a::vec2, b::vec2)::Cfloat
end

function vec3_project(a, onto_b)
    @ccall StereoKitC.vec3_project(a::vec3, onto_b::vec3)::vec3
end

function vec4_normalize(a)
    @ccall StereoKitC.vec4_normalize(a::vec4)::vec4
end

function vec3_normalize(a)
    @ccall StereoKitC.vec3_normalize(a::vec3)::vec3
end

function vec2_normalize(a)
    @ccall StereoKitC.vec2_normalize(a::vec2)::vec2
end

function vec3_abs(a)
    @ccall StereoKitC.vec3_abs(a::vec3)::vec3
end

function vec2_abs(a)
    @ccall StereoKitC.vec2_abs(a::vec2)::vec2
end

function vec3_lerp(a, b, t)
    @ccall StereoKitC.vec3_lerp(a::vec3, b::vec3, t::Cfloat)::vec3
end

function vec2_lerp(a, b, t)
    @ccall StereoKitC.vec2_lerp(a::vec2, b::vec2, t::Cfloat)::vec2
end

function vec3_in_radius(pt, center, radius)
    @ccall StereoKitC.vec3_in_radius(pt::vec3, center::vec3, radius::Cfloat)::bool32_t
end

function vec2_in_radius(pt, center, radius)
    @ccall StereoKitC.vec2_in_radius(pt::vec2, center::vec2, radius::Cfloat)::bool32_t
end

function plane_ray_intersect(plane, ray, out_pt)
    @ccall StereoKitC.plane_ray_intersect(plane::plane_t, ray::ray_t, out_pt::Ptr{vec3})::bool32_t
end

function plane_line_intersect(plane, p1, p2, out_pt)
    @ccall StereoKitC.plane_line_intersect(plane::plane_t, p1::vec3, p2::vec3, out_pt::Ptr{vec3})::bool32_t
end

function plane_point_closest(plane, pt)
    @ccall StereoKitC.plane_point_closest(plane::plane_t, pt::vec3)::vec3
end

function sphere_ray_intersect(sphere, ray, out_pt)
    @ccall StereoKitC.sphere_ray_intersect(sphere::sphere_t, ray::ray_t, out_pt::Ptr{vec3})::bool32_t
end

function sphere_point_contains(sphere, pt)
    @ccall StereoKitC.sphere_point_contains(sphere::sphere_t, pt::vec3)::bool32_t
end

function bounds_ray_intersect(bounds, ray, out_pt)
    @ccall StereoKitC.bounds_ray_intersect(bounds::bounds_t, ray::ray_t, out_pt::Ptr{vec3})::bool32_t
end

function bounds_point_contains(bounds, pt)
    @ccall StereoKitC.bounds_point_contains(bounds::bounds_t, pt::vec3)::bool32_t
end

function bounds_line_contains(bounds, pt1, pt2)
    @ccall StereoKitC.bounds_line_contains(bounds::bounds_t, pt1::vec3, pt2::vec3)::bool32_t
end

function bounds_capsule_contains(bounds, pt1, pt2, radius)
    @ccall StereoKitC.bounds_capsule_contains(bounds::bounds_t, pt1::vec3, pt2::vec3, radius::Cfloat)::bool32_t
end

function ray_point_closest(ray, pt)
    @ccall StereoKitC.ray_point_closest(ray::ray_t, pt::vec3)::vec3
end

struct color32
    r::UInt8
    g::UInt8
    b::UInt8
    a::UInt8
end

struct color128
    r::Cfloat
    g::Cfloat
    b::Cfloat
    a::Cfloat
end

function color_hsv(hue, saturation, value, transparency)
    @ccall StereoKitC.color_hsv(hue::Cfloat, saturation::Cfloat, value::Cfloat, transparency::Cfloat)::color128
end

function color_to_hsv(color)
    @ccall StereoKitC.color_to_hsv(color::Ptr{color128})::vec3
end

function color_lab(l, a, b, transparency)
    @ccall StereoKitC.color_lab(l::Cfloat, a::Cfloat, b::Cfloat, transparency::Cfloat)::color128
end

function color_to_lab(color)
    @ccall StereoKitC.color_to_lab(color::Ptr{color128})::vec3
end

function color_to_linear(srgb_gamma_correct)
    @ccall StereoKitC.color_to_linear(srgb_gamma_correct::color128)::color128
end

function color_to_gamma(srgb_linear)
    @ccall StereoKitC.color_to_gamma(srgb_linear::color128)::color128
end

function color_lerp(a, b, t)
    @ccall StereoKitC.color_lerp(a::color128, b::color128, t::Cfloat)::color128
end

function color_to_32(a)
    @ccall StereoKitC.color_to_32(a::color128)::color32
end

function color32_to_128(color)
    @ccall StereoKitC.color32_to_128(color::color32)::color128
end

function color32_hex(hex)
    @ccall StereoKitC.color32_hex(hex::UInt32)::color32
end

function color_hex(hex)
    @ccall StereoKitC.color_hex(hex::UInt32)::color128
end

mutable struct _gradient_t end

const gradient_t = Ptr{_gradient_t}

mutable struct _mesh_t end

const mesh_t = Ptr{_mesh_t}

mutable struct _tex_t end

const tex_t = Ptr{_tex_t}

mutable struct _font_t end

const font_t = Ptr{_font_t}

mutable struct _shader_t end

const shader_t = Ptr{_shader_t}

mutable struct _material_t end

const material_t = Ptr{_material_t}

mutable struct _material_buffer_t end

const material_buffer_t = Ptr{_material_buffer_t}

mutable struct _model_t end

const model_t = Ptr{_model_t}

mutable struct _sprite_t end

const sprite_t = Ptr{_sprite_t}

mutable struct _sound_t end

const sound_t = Ptr{_sound_t}

mutable struct _solid_t end

const solid_t = Ptr{_solid_t}

struct gradient_key_t
    color::color128
    position::Cfloat
end

# no prototype is found for this function at stereokit.h:603:19, please use with caution
function gradient_create()
    @ccall StereoKitC.gradient_create()::gradient_t
end

function gradient_create_keys(keys, count)
    @ccall StereoKitC.gradient_create_keys(keys::Ptr{gradient_key_t}, count::Int32)::gradient_t
end

function gradient_add(gradient, color_linear, position)
    @ccall StereoKitC.gradient_add(gradient::gradient_t, color_linear::color128, position::Cfloat)::Cvoid
end

function gradient_set(gradient, index, color_linear, position)
    @ccall StereoKitC.gradient_set(gradient::gradient_t, index::Int32, color_linear::color128, position::Cfloat)::Cvoid
end

function gradient_remove(gradient, index)
    @ccall StereoKitC.gradient_remove(gradient::gradient_t, index::Int32)::Cvoid
end

function gradient_count(gradient)
    @ccall StereoKitC.gradient_count(gradient::gradient_t)::Int32
end

function gradient_get(gradient, at)
    @ccall StereoKitC.gradient_get(gradient::gradient_t, at::Cfloat)::color128
end

function gradient_get32(gradient, at)
    @ccall StereoKitC.gradient_get32(gradient::gradient_t, at::Cfloat)::color32
end

function gradient_release(gradient)
    @ccall StereoKitC.gradient_release(gradient::gradient_t)::Cvoid
end

struct spherical_harmonics_t
    coefficients::NTuple{9, vec3}
end

struct sh_light_t
    dir_to::vec3
    color::color128
end

function sh_create(lights, light_count)
    @ccall StereoKitC.sh_create(lights::Ptr{sh_light_t}, light_count::Int32)::spherical_harmonics_t
end

function sh_brightness(harmonics, scale)
    @ccall StereoKitC.sh_brightness(harmonics::Ptr{spherical_harmonics_t}, scale::Cfloat)::Cvoid
end

function sh_add(harmonics, light_dir, light_color)
    @ccall StereoKitC.sh_add(harmonics::Ptr{spherical_harmonics_t}, light_dir::vec3, light_color::vec3)::Cvoid
end

function sh_lookup(harmonics, normal)
    @ccall StereoKitC.sh_lookup(harmonics::Ptr{spherical_harmonics_t}, normal::vec3)::color128
end

function sh_dominant_dir(harmonics)
    @ccall StereoKitC.sh_dominant_dir(harmonics::Ptr{spherical_harmonics_t})::vec3
end

struct vert_t
    pos::vec3
    norm::vec3
    uv::vec2
    col::color32
end

function vert_create(position, normal, texture_coordinates, vertex_color)
    @ccall StereoKitC.vert_create(position::vec3, normal::vec3, texture_coordinates::vec2, vertex_color::color32)::vert_t
end

const vind_t = UInt32

function mesh_find(name)
    @ccall StereoKitC.mesh_find(name::Ptr{Cchar})::mesh_t
end

# no prototype is found for this function at stereokit.h:648:17, please use with caution
function mesh_create()
    @ccall StereoKitC.mesh_create()::mesh_t
end

function mesh_copy(mesh)
    @ccall StereoKitC.mesh_copy(mesh::mesh_t)::mesh_t
end

function mesh_set_id(mesh, id)
    @ccall StereoKitC.mesh_set_id(mesh::mesh_t, id::Ptr{Cchar})::Cvoid
end

function mesh_addref(mesh)
    @ccall StereoKitC.mesh_addref(mesh::mesh_t)::Cvoid
end

function mesh_release(mesh)
    @ccall StereoKitC.mesh_release(mesh::mesh_t)::Cvoid
end

function mesh_draw(mesh, material, transform, color_linear, layer)
    @ccall StereoKitC.mesh_draw(mesh::mesh_t, material::material_t, transform::matrix, color_linear::color128, layer::render_layer_)::Cvoid
end

function mesh_set_keep_data(mesh, keep_data)
    @ccall StereoKitC.mesh_set_keep_data(mesh::mesh_t, keep_data::bool32_t)::Cvoid
end

function mesh_get_keep_data(mesh)
    @ccall StereoKitC.mesh_get_keep_data(mesh::mesh_t)::bool32_t
end

function mesh_set_data(mesh, vertices, vertex_count, indices, index_count, calculate_bounds)
    @ccall StereoKitC.mesh_set_data(mesh::mesh_t, vertices::Ptr{vert_t}, vertex_count::Int32, indices::Ptr{vind_t}, index_count::Int32, calculate_bounds::bool32_t)::Cvoid
end

function mesh_set_verts(mesh, vertices, vertex_count, calculate_bounds)
    @ccall StereoKitC.mesh_set_verts(mesh::mesh_t, vertices::Ptr{vert_t}, vertex_count::Int32, calculate_bounds::bool32_t)::Cvoid
end

function mesh_get_verts(mesh, out_vertices, out_vertex_count, reference_mode)
    @ccall StereoKitC.mesh_get_verts(mesh::mesh_t, out_vertices::Ptr{Ptr{vert_t}}, out_vertex_count::Ptr{Int32}, reference_mode::memory_)::Cvoid
end

function mesh_get_vert_count(mesh)
    @ccall StereoKitC.mesh_get_vert_count(mesh::mesh_t)::Int32
end

function mesh_set_inds(mesh, indices, index_count)
    @ccall StereoKitC.mesh_set_inds(mesh::mesh_t, indices::Ptr{vind_t}, index_count::Int32)::Cvoid
end

function mesh_get_inds(mesh, out_indices, out_index_count, reference_mode)
    @ccall StereoKitC.mesh_get_inds(mesh::mesh_t, out_indices::Ptr{Ptr{vind_t}}, out_index_count::Ptr{Int32}, reference_mode::memory_)::Cvoid
end

function mesh_get_ind_count(mesh)
    @ccall StereoKitC.mesh_get_ind_count(mesh::mesh_t)::Int32
end

function mesh_set_draw_inds(mesh, index_count)
    @ccall StereoKitC.mesh_set_draw_inds(mesh::mesh_t, index_count::Int32)::Cvoid
end
